# hierarchical_agglom

./: .gitignore  README.md  dev_requirments.txt  install.sh  setup.cfg  setup.py  test.py
.github/workflows/: tests.yaml
configs/: 05_segmentation.json  evaluate.json
src/heiarchical_agglom/: __init__.py  agglomerate_blockwise.py  evaluate_thresholds.py  extract_fragments.py  extract_segments_from_lut.py  find_segments.py  run_hierarchical_agglom_segmentation.py  run_pipeline.py  segment.sh  utils.py
src/heiarchical_agglom/configs/: 02_extract_frags.json  03_agglomerate.json  04_find_segments.json
src/hglom/: __init__.py  hglom_segmentation.py
src/hglom/aglo/: __init__.py  extract_fragments.py
src/hglom/algo/: __init__.py  agglomerate_blockwise.py  evaluate_thresholds.py  extract_fragments.py  extract_segments_from_lut.py  find_segments.py
src/hglom/optim/: __init__.py  base_optimizer.py  genetic_optim.py  gridsearch_optim.py  particleswarm_optim.py
tests/: pipeline_test.py
