[metadata]
name = hglom
version = 0.1.0
author = Brian Reicher
author_email = reicher.b@northeastern.edu
url = https://github.com/brianreicher/hierarchical_agglom
description = A package for parallelized hierarchical-merge-tree-based image segmentation, built on MongoDB and C++.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = image-segmentation, merge-tree
license = Apache Software License
classifiers =
    Programming Language :: Python :: 3


[options]
packages = find:
package_dir=
    =src
zip_safe = True
include_package_data = True
install_requires =
    numpy
    pymongo
    scikit-image
    daisy
    numba
    matplotlib
    mwatershed @ git+https://github.com/pattonw/mwatershed
    funlib.geometry @ git+https://github.com/funkelab/funlib.geometry
    funlib.persistence @ git+https://github.com/funkelab/funlib.persistence
    funlib.segment @ git+https://github.com/funkelab/funlib.segment
    funlib.evaluate @ git+https://github.com/pattonw/funlib.evaluate.git
    gunpowder @ git+https://github.com/funkey/gunpowder
    lsds @ git+https://github.com/brianreicher/lsd.git


[options.packages.find]
where=src
